--- a/packages/mantine-react-table/src/components/body/MRT_TableBodyCell.module.css
+++ b/packages/mantine-react-table/src/components/body/MRT_TableBodyCell.module.css
@@ -4,6 +4,7 @@
   background-clip: padding-box;
   text-align: var(--mrt-cell-align, left);
   overflow: hidden;
+  position: relative;
   transition: padding 150ms ease-in-out;
 
   &[data-column-pinned] {
@@ -13,13 +14,13 @@
     z-index: 1;
 
     &:before {
+      background-color: transparent;
       content: '';
+      height: 100%;
+      left: 0;
       position: absolute;
       top: 0;
-      left: 0;
       width: 100%;
-      height: 100%;
-      background-color: transparent;
       z-index: -1;
     }
 
