start writing new CSS guide

--- a/packages/mantine-react-table/src/components/body/MRT_TableBodyRow.module.css
+++ b/packages/mantine-react-table/src/components/body/MRT_TableBodyRow.module.css
@@ -172,6 +172,12 @@
         &[data-striped='even'] {
           td {
             background-color: var(--mrt-striped-row-hover-background-color);
+            &[data-column-pinned] {
+              background-color: var(--mrt-base-background-color);
+              &:before {
+                background-color: var(--mrt-striped-row-hover-background-color);
+              }
+            }
           }
         }
       }
